prometheus.v2.11.0/fix/services-monitor_ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx-prometheus
  namespace: ingress-lan
  labels:
    app: inner-nginx-ingress
spec:
  ports:
    - name: prometheus
      protocol: TCP
      port: 10254
      targetPort: 10254
  selector:
    app: ingress-nginx
